--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
+
             <div class="showcase-form card">
                 <h2>Request a Demo</h2>
                 <form>
@@ -112,12 +113,72 @@
                     Extreme Cloud Hosting
                 </h2>
                 <p class="lead my-1">
-                    Cloud hostng  like you have never seen. Fast, efficient and scalable
+                    Cloud hosting  like you have never seen. Fast, efficient and scalable
                 </p>
                 <a href="features.html" class="btn btn-dark">Read More</a>
             </div>
             <img src="cloud.png" alt="">
         </div>
     </section>
+    <!--languages-->
+    <section class="languages">
+        <h2 class="md text-center my-2">
+            Supported languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="logos/node.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="logos/python.png" alt="">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="logos/csharp.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="logos/ruby.png" alt="">
+            </div>
+            <div class="card">
+                <h4>PHP</h4>
+                <img src="logos/php.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="logos/scala.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Clojure</h4>
+                <img src="logos/clojure.png" alt="">
+            </div>
+        </div>
+
+    </section>
+    <!--footer-->
+    <footer style="background-color: #002240" class="footer bg-dark py-5");
+    >
+        <div class="container grid grid-3">
+            <div>
+                <h1>Loruki</h1>
+                <p>Copyright &copy; 2022</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html"Home></a></li>
+                    <li><a href="features.html"Features></a></li>
+                    <li><a href="docs.html"Docs></a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href=""><i class="fab fa-github fa-2x"></i></a>
+                <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+                <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+                <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
